Derive CPEs from RedHat OVAL more accurately